learning how to improve/change games

--- a/game-start/hangman/index.html
+++ b/game-start/hangman/index.html
@@ -30,12 +30,12 @@
     </div>
   </div>
 
-  <div>Answer:</div>
+  <div>Answer:</div> 
   <div id="word-spaces">
-  </div>
+  </div> 
 
   <div>
-    <!-- Add something here that let's you enter in a single letter and something that submits that letter as your guess -->
+    <input type="text" id= "fire">
   </div>
 
    <!-- Javascript is used to make things move and respond to things the user does. -->
